--- a/public/style.css
+++ b/public/style.css
@@ -52,8 +52,9 @@ body {
     display: flex;
     position: relative;
     justify-content: space-evenly;
-    gap: 148px;
     top: 562px;
+    justify-content: center;
+    gap: 593px;
 }
 
 #weekStart {
@@ -94,14 +95,14 @@ body {
 #teamBStart {
     position: relative;
     top: 840px;
-    left: 1544px;
+    left: 1538px;
     width: 9%;
 }
 
 #teamAStart {
     position: relative;
     top: 840px;
-    left: 44px;
+    left: 35px;
     width: 9%;
 }
 
@@ -115,10 +116,8 @@ body {
 }
 
 .contain {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 521px;
-    gap: 219px;
+    margin-top: 516px;
+    gap: 652px;
     position: relative;
 }
 
@@ -142,11 +141,15 @@ body {
     flex-direction: column;
     position: relative;
     align-items: center;
+    margin-left: 810px;
 }
 
 #containerB {
     display: flex;
     flex-direction: column;
-    position: relative;
+    position: absolute;
     align-items: center;
+    margin-left: 310px;
+    width: 501px;
+    top: 0;
 }
