--- a/public/possess/style.css
+++ b/public/possess/style.css
@@ -3,6 +3,46 @@
     width: 100%;
 }
 
+body {
+    margin-top: 39vw !important;
+}
+
 object {
     margin-top: 49px;
+}
+
+
+.content {
+    top: 3vw;
+    position: relative;
+}
+
+.content .div {
+    width: 10%;
+}
+
+.content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 2px;
+    grid-row-gap: 1px;
+    width: 18.25%;
+    left: 4.6vw;
+    top: 2.5vw;
+    height: 69%;
+}
+
+.div1 { grid-area: 1 / 1 / 2 / 2; display: flex; justify-content: center; align-items: center;  }
+.div2 { grid-area: 1 / 2 / 2 / 3; display: flex; justify-content: center; align-items: center;  }
+.div3 { grid-area: 2 / 2 / 3 / 3; display: flex; justify-content: center; align-items: center;  }
+.div4 { grid-area: 2 / 1 / 3 / 2; display: flex; justify-content: center; align-items: center;  }
+.div5 { grid-area: 3 / 1 / 4 / 2; display: flex; justify-content: center; align-items: center;  }
+.div6 { grid-area: 4 / 1 / 5 / 2; display: flex; justify-content: center; align-items: center;  }
+.div7 { grid-area: 3 / 2 / 4 / 3; display: flex; justify-content: center; align-items: center;  }
+.div8 { grid-area: 4 / 2 / 5 / 3; display: flex; justify-content: center; align-items: center;  }
+
+.content a {
+    font-size: 15px;
+    font-weight: 600;
 }
