--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap');
 
 body {
     color: white;
     margin: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Kanit', sans-serif;
 }
