--- a/public/starting/style.css
+++ b/public/starting/style.css
@@ -1,109 +1,87 @@
-
-
-object {
-    margin-top: 39px;
+body {
+    width: 100%;
+    background-color: #1B121E;
+    overflow-y: hidden;
+    position: absolute;
+    font-family: 'Kanit', sans-serif;
 }
 
-.background {
+.top {
+    display: flex;
     position: absolute;
     width: 100%;
+    flex-direction: column;
+    margin-top: 3vw;
+    align-items: center;
 }
 
-.content {
-    position: relative;
-}
-
-
-.nameBar {
-    display: flex;
-    position: relative;
-    top: 37.2vw;
-    justify-content: center;
-}
-
-#teamNameA{
-    font-size: 1.2vw;
-    font-weight: 700;
-
-}
-
-#teamNameB {
-    font-size: 1.2vw;
-    font-weight: 700;
-
-}
-
-.mainColorFill {
-    fill:red !important
-}
-
-.contain {
-    margin-top: 37.8vw;
-    position: relative;
-}
-
-.contain a{
-    font-size: 1.2vw;
+.bottom {
+    position: absolute;
+    top: 46vw;
+    align-items: center;
+    left: 40vw;
     font-weight: 600;
-    margin-top: 0.57vw;
-    margin-bottom: 0.55vw;
-}
-
-.place {
     display: flex;
-    top: 53.9vw;
-    font-size: 1.2vw;
-    font-weight: 700;
-    position: relative;
-}
-
-#nbA {
-    position: relative;
-    margin-left: 3.8vw;
-    width: 5%;
-    text-align-last: center;
-}
-
-#nbB {
-    position: absolute;
-    margin-left: 91.3vw;
-    width: 5%;
-    text-align: center;
-}
-
-#containerA {
-    display: flex;
+    line-height: 2.5vw;
+    font-size: 3vw;
     flex-direction: column;
-    position: relative;
-    align-items: center;
-
-    margin-left: 42.2vw;
-
 }
 
-#containerB {
+.title {
+    font-weight: 600;
+    font-size: 3vw;
+    line-height: 2.5vw;
+}
+
+.echo {
+    width: 20vw;
+}
+
+.loading-box-container {
+    --size: 60vw;
+    --radius: 0.8vw;
+    position: relative;
+    width: var(--size);
+    height: 34vw;
+    margin: 9vw auto;
+    padding: var(--radius);
+    overflow: hidden;
+}
+
+.loading-box {
+    position: relative;
+    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
-    position: absolute;
     align-items: center;
-    width: 15vw;
-    top: 0;
-    margin-left: 21.5vw;
-    top: 0;
+    justify-content: center;
+    color: #fff;
+    background: #1B121E;
+
 }
 
-.containNameStart {
-    position: relative;
-    align-items: center;
-    width: 455px;
-    margin-left: 42.2vw;
-    text-align: center;
+.loading-box-container::before {
+    content: '';
+    width: 150%;
+    height: 119vw;
+    position: absolute;
+    top: -111%;
+    left: -25%;
+    background: conic-gradient(#0000ff00, #DC872C, #0000ff00, #03BAE0);
+    animation: rotate-border 5s linear infinite;
 }
 
-.containNameStartB {
+@keyframes rotate-border {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.logo {
+    filter: brightness(0) saturate(100%) invert(11%) sepia(25%) saturate(607%) hue-rotate(194deg) brightness(94%) contrast(95%);
+    width: 85%;
+    margin: -16% auto;
+    margin-left: 7.6%;
+    display: block;
     position: absolute;
-    align-items: center;
-    width: 455px;
-    margin-right: 42vw;
-    text-align: center;
 }
