--- a/public/starting/style.css
+++ b/public/starting/style.css
@@ -6,6 +6,68 @@ body {
     font-family: 'Kanit', sans-serif;
 }
 
+.logoOrange {
+    width: 13.5vw;
+}
+
+.logoBlue {
+    width: 13.5vw;
+}
+
+.boxOrange {
+    background: linear-gradient(to right, #DC872C, #FA4011);
+    height: 2.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.o {
+    background-image: linear-gradient(to left, rgba(250, 63, 16, 0.25), rgba(220, 135, 44,0.25));
+}
+
+.b {
+    background-image: linear-gradient(to right, rgba(3, 117, 255,0.25), rgba(3, 185, 224,0.25));
+}
+
+.row {
+    width: 13.5vw;
+    height: 1.4vw;
+    display: flex;
+    justify-content: center;
+    font-weight: 600;
+    margin-top: -1px;
+}
+
+.boxBlue {
+    background: linear-gradient(to right, #0376FF, #03BAE0);
+    height: 2.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.teamColor {
+    font-size: 1vw;
+    font-weight: 600;
+    justify-content: center;
+    display: flex;
+}
+
+
+.teams {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin-left: auto;
+    display: flex;
+    margin-right: auto;
+    justify-content: space-between;
+    width: 94%;
+    margin-top: 15vw;
+}
+
 .top {
     display: flex;
     position: absolute;
@@ -19,7 +81,7 @@ body {
     position: absolute;
     top: 46vw;
     align-items: center;
-    left: 40vw;
+    left: 39.5vw;
     font-weight: 600;
     display: flex;
     line-height: 2.5vw;
@@ -35,53 +97,4 @@ body {
 
 .echo {
     width: 20vw;
-}
-
-.loading-box-container {
-    --size: 60vw;
-    --radius: 0.8vw;
-    position: relative;
-    width: var(--size);
-    height: 34vw;
-    margin: 9vw auto;
-    padding: var(--radius);
-    overflow: hidden;
-}
-
-.loading-box {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    background: #1B121E;
-
-}
-
-.loading-box-container::before {
-    content: '';
-    width: 150%;
-    height: 119vw;
-    position: absolute;
-    top: -111%;
-    left: -25%;
-    background: conic-gradient(#0000ff00, #DC872C, #0000ff00, #03BAE0);
-    animation: rotate-border 5s linear infinite;
-}
-
-@keyframes rotate-border {
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-.logo {
-    filter: brightness(0) saturate(100%) invert(11%) sepia(25%) saturate(607%) hue-rotate(194deg) brightness(94%) contrast(95%);
-    width: 85%;
-    margin: -16% auto;
-    margin-left: 7.6%;
-    display: block;
-    position: absolute;
 }
