--- a/public/wait/style.css
+++ b/public/wait/style.css
@@ -14,15 +14,6 @@ body {
     line-height: 2.5vw;
 }
 
-.logo {
-    filter: brightness(0) saturate(100%) invert(11%) sepia(25%) saturate(607%) hue-rotate(194deg) brightness(94%) contrast(95%);
-    width: 85%;
-    margin: -16% auto;
-    margin-left: 7.6%;
-    display: block;
-    position: absolute;
-}
-
 .vs {
     font-size: 14vw;
     line-height: 9vw !important;
@@ -49,15 +40,23 @@ body {
 .boxOrange {
     background: linear-gradient(to right, #DC872C, #FA4011);
     height: 3.5vw;
+    align-items: center;
+    display: flex;
+    max-width: 20vw;
+    justify-content: center;
 }
 
 .boxBlue {
     background: linear-gradient(to right, #0376FF, #03BAE0);
     height: 3.5vw;
+    align-items: center;
+    display: flex;
+    max-width: 20vw;
+    justify-content: center;
 }
 
 .teamColor {
-    font-size: 2.21vw;
+    font-size: 1.4vw;
     font-weight: 600;
     justify-content: center;
     display: flex;
