--- a/public/possess/style.css
+++ b/public/possess/style.css
@@ -1,54 +1,128 @@
-.background {
-    position: absolute;
-    width: 100%;
+.title {
+    height: 1.2vw;
+    font-size: 0.9vw;
+    align-items: center;
+    justify-content: end;
+    display: flex;
+    background-color: rgba(31, 33, 45, 0.72);
 }
 
-body {
-    margin-top: 39vw !important;
+.orange, .blue {
+    width: 16.1vw;
 }
 
-object {
-    margin-top: 49px;
+.contain {
+    display: flex;
+    gap: 0.7vw;
+    margin-right: 1.5vw;
+    align-items: center;
 }
 
 .content {
-    top: 3vw;
-    position: relative;
-}
-
-.content .div {
-    width: 10%;
-}
-
-.content {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 2px;
-    grid-row-gap: 1px;
-    width: 18.25%;
-    left: 4.6vw;
-    top: 2.5vw;
-    height: 69%;
-}
-
-.current {
-    font-weight: 700;
-}
-
-
-
-.div1 { grid-area: 1 / 1 / 2 / 2; display: flex; justify-content: center; align-items: center;  }
-.div2 { grid-area: 1 / 2 / 2 / 3; display: flex; justify-content: center; align-items: center;  }
-.div3 { grid-area: 2 / 2 / 3 / 3; display: flex; justify-content: center; align-items: center;  }
-.div4 { grid-area: 2 / 1 / 3 / 2; display: flex; justify-content: center; align-items: center;  }
-.div5 { grid-area: 3 / 1 / 4 / 2; display: flex; justify-content: center; align-items: center;  }
-.div6 { grid-area: 4 / 1 / 5 / 2; display: flex; justify-content: center; align-items: center;  }
-.div7 { grid-area: 3 / 2 / 4 / 3; display: flex; justify-content: center; align-items: center;  }
-.div8 { grid-area: 4 / 2 / 5 / 3; display: flex; justify-content: center; align-items: center;  }
-
-.content a {
-    font-size: 15px;
+    display: flex;
+    justify-content: space-around;
+    margin-left: 0vw;
+    gap: 63vw;
+    margin-top: 33vw;
     font-weight: 600;
-    opacity: 0.6;
+    font-size: 1vw;
+}
+
+.stunO {
+    background-color: #6E4416 !important;
+}
+
+
+
+.holdO {
+    background-image: linear-gradient(to left, #DC872C, #FA4011) !important;
+}
+
+.stunB {
+    background-color: #025D70 !important;
+}
+
+.holdB {
+    background-image: linear-gradient(to left, #0BDBE8, #0375FF) !important;
+}
+
+/* normal 0BDBE8 */
+
+.poss {
+    position: absolute;
+    width: 16.1vw;
+}
+
+.datas {
+    display: flex;
+    gap: 0.95vw;
+    margin-top: 0.5vw;
+}
+
+.data {
+    display: flex;
+    gap: 0.95vw;
+    margin-right: 1.65vw;
+    justify-content: end;
+}
+
+.datarow {
+    width: 1.5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.playercontent {
+    height: 2.6vw;
+    background-color: rgba(31, 33, 45, 0.72);
+}
+
+.top-header a {
+    margin-left: 0.5vw;
+}
+
+.top-header {
+    font-size: 0.9vw;
+    display: flex;
+    align-items: center;
+    height: 1.2vw;
+    
+}
+
+.hide {
+    display: none;
+}
+
+.possB {
+    transform: scaleX(-1);
+}
+
+.dataB {
+    margin-left: 1.65vw;
+    justify-content: start;
+}
+
+.topB {
+    justify-content: end;
+}
+
+.topB a {
+    margin-right: 0.5vw;
+}
+
+.bTitle {
+    justify-content: start;
+}
+
+.bCont {
+    margin-left: 1.5vw;
+}
+
+.O {
+    background-color: #DC872C;
+}
+
+.B {
+    background-color: #0BDBE8;
 }
