--- a/public/starting/style.css
+++ b/public/starting/style.css
@@ -40,6 +40,7 @@ body {
     display: flex;
     justify-content: center;
     font-weight: 600;
+    font-size: 0.85vw;
     margin-top: -1px;
 }
 
