--- a/ui/style.css
+++ b/ui/style.css
@@ -14,6 +14,12 @@ nav {
     font-size: 19px;
 }
 
+:disabled {
+    pointer-events: none;
+    opacity: 0.5;
+
+}
+
 body::-webkit-scrollbar {
     display: none;
 }
