--- a/public/shot/style.css
+++ b/public/shot/style.css
@@ -2,42 +2,9 @@ body {
     overflow: hidden;
 }
 
-#gradient {
-    --size: 26vw;
-    --radius: 0.4vw;
-    --gradient:conic-gradient(#DC872C, #FA3F10);
-    position: relative;
-    width: var(--size);
-    height: 14vw;
-    margin: 2vw 71vw;
-    padding: var(--radius);
-    overflow: hidden;
-}
-
-.replay-box {
-    position: relative;
-    width: 100%;
-    flex-direction: column;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    background-color: #1B121E;
-}
-
 .here {
     font-size: 2vw;
 }
-
-.replay {
-    position: fixed;
-    top: 13vw;
-    font-weight: 600;
-    font-size: 3vw;
-}
-
-
 
 .nick {
     font-size: 2.35vw;
@@ -73,6 +40,7 @@ body {
 #comp {
     transition: all 1s ease-in-out;
     display: block;
+    margin-top: 17.5vw;
 }
 
 .txt {
@@ -117,15 +85,4 @@ body {
 
 .b {
     background-image: linear-gradient(to right, rgb(3, 117, 255), rgb(3, 185, 224));
-}
-
-#gradient::before {
-    content: '';
-    width: 150%;
-    height: 119vw;
-    position: absolute;
-    top: -351%;
-    background: var(--gradient);
-    left: -25%;
-    animation: rotate-border 5s linear infinite;
 }
