--- a/ui/style.css
+++ b/ui/style.css
@@ -32,6 +32,32 @@ body::-webkit-scrollbar {
     margin-left: 9%;
 }
 
+.gif {
+    width: 20%;
+    height: 15%;
+    margin-top: 47vw;
+}
+
+.box {
+    width: 100vw;
+    height: 100vw;
+    position: relative;
+}
+
+.content {
+    width: 100%;
+    height: 131%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+#loader {
+    display: flex;
+    justify-content: center;
+    background-color: #2D3F4B;
+}
+
 .navbar-container {
     display: flex;
     background-color: #152630;
@@ -69,6 +95,7 @@ li {
 section {
     margin-left: 9%;
     margin-right: 9%;
+    padding-bottom: 5vw;
 }
 
 div.block {
